FIX incorrect page-break in stylesheet

--- a/SetList/common.css
+++ b/SetList/common.css
@@ -28,7 +28,7 @@
 }
 
 /* optional songs */
-#outMore {
+#outMoreTitle {
     page-break-before: always;
 }
 #outMore .entry {
